--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="css/makeitresponsive.css">
     <title>Ellis Act Evictions</title>
     <link rel="stylesheet" href="css/jquery-ui.min.css">
-    <script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
-    <script src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
+    <script src="https://d3js.org/d3.v2.min.js?2.9.3"></script>
+    <script src="https://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
     <script src="js/jquery.ui.core.js"></script>
     <script src="js/jquery.ui.widget.js"></script>
     <script src="js/jquery.ui.mouse.js"></script>
     <script src="js/jquery.ui.slider.js"></script>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+    <script src="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
 <![endif]-->
