--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="js/jquery.ui.slider.js"></script>
     <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
     <script src="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/query-result/0.1.3/query-result.js"></script>
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
 <![endif]-->
