--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <title>Ellis Act Evictions</title>
     <link rel="stylesheet" href="css/jquery-ui.min.css">
     <script src="https://d3js.org/d3.v2.min.js?2.9.3"></script>
-    <script src="https://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
+<!--     <script src="https://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script> -->
+    <!-- script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script -->
     <script src="js/jquery.ui.core.js"></script>
     <script src="js/jquery.ui.widget.js"></script>
     <script src="js/jquery.ui.mouse.js"></script>
