--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     <script src="js/jquery.ui.widget.js"></script>
     <script src="js/jquery.ui.mouse.js"></script>
     <script src="js/jquery.ui.slider.js"></script>
-    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-    <script src="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+<!--     <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.css" />
+<!--     <script src="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script> -->
+<!--     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/query-result/0.1.3/query-result.js"></script>
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
