--- a/index.html
+++ b/index.html
@@ -192,6 +192,15 @@
     })
     .addLayer(new L.TileLayer("http://{s}.tile.cloudmade.com/1a1b06b230af4efdbb989ea99e9841af/59870/256/{z}/{x}/{y}.png"));
 
+    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiZmxvb2llIiwiYSI6ImNpemEzbzk1ZTAyZHUzMnBvZ2JnMGp4MzEifQ.ifX3xFiQp12oyjpI-1_eIg', {
+		maxZoom: 18,
+		attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+			'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+			'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+		id: 'mapbox.streets'
+	}).addTo(map);
+
+      
 /* Initialize the SVG layer */
   map._initPathRoot()    
 
