--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	  
 <!--     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" /> -->
   <link rel="stylesheet" href="css/cartodb.css">  
 	  
@@ -20,14 +21,27 @@
     <link rel="stylesheet" href="css/makeitresponsive.css">
     <title>Ellis Act Evictions</title>
     <link rel="stylesheet" href="css/jquery-ui.min.css">
-    <script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
-    <script src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
+	  
+<!--     <script src="http://d3js.org/d3.v2.min.js?2.9.3"></script> -->
+<script src="https://d3js.org/d3.v2.min.js?2.9.3"></script>
+	  
+	  
+<!--     <script src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script> -->
+<script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
+	  
+	  
+	  
     <script src="js/jquery.ui.core.js"></script>
     <script src="js/jquery.ui.widget.js"></script>
     <script src="js/jquery.ui.mouse.js"></script>
     <script src="js/jquery.ui.slider.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+	  
+	  
+<!--     <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.js"></script>
+	  
+	  
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
 <![endif]-->
