--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css">
 	  
 <!--     <script src="http://d3js.org/d3.v2.min.js?2.9.3"></script> -->
-<script src="https://d3js.org/d3.v2.min.js?2.9.3"></script>
-	  
+<!-- <script src="https://d3js.org/d3.v2.min.js?2.9.3"></script> -->
+    <script src="js/libs/jquery.min.js"></script>
+
+
+    <!--<script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>-->
+      <script src="js/libs/d3.vs.min.js"></script>
+
+
 	  
 <!--     <script src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script> -->
 <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
