--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <script src="js/libs/jquery.min.js"></script>
 
 
-    <!--<script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>-->
-      <script src="js/libs/d3.vs.min.js"></script>
+    <script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
+<!--       <script src="js/libs/d3.vs.min.js"></script> -->
 
 
 	  
