--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
 
 <!--     <script src="http://d3js.org/d3.v2.min.js?2.9.3"></script> -->
-      <script src="js/libs/d3.v2.min.js"></script>
+<!--       <script src="js/libs/d3.v2.min.js"></script> -->
+	      <script src="https://d3js.org/d3.v2.min.js?2.9.3"></script>
+
 
 
 	  
