--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
    var node = g.selectAll(".node").data(collection.features).enter().append("g");
 
     var feature = node.append("circle")
-       .attr("r", function(d) { return d.properties.units;})
+//        .attr("r", function(d) { return d.properties.units;})
+       .attr("r", 7)
       .attr("class", "center");
 
    node.on("mouseover", function(d){
@@ -372,7 +373,7 @@
 
           .duration(800)
           .ease(Math.sqrt)
-          .attr("r", function(d) { return d.properties.units*30;})
+          .attr("r", function(d) { 7*30;})
             .style("fill","#f40")
           .style("fill-opacity", 1e-6)
           .remove();
