--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
    <div class="sidepanel">
       <div class="wrapper">
         <p></p>
-        <h1>THE ELLIS ACT</h1>
+        <h1>Boston Evictions</h1>
 
          <h3 id="runningTotal">  <div id="counter" style="color: #ff3300; font-size:80px; opacity:0.9 " > 0</div><br>San Francisco families forced out of their homes, <br>
         <span id="date"> </span> </h3>
