--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
         <p></p>
         <h1>Boston Evictions</h1>
 
-         <h3 id="runningTotal">  <div id="counter" style="color: #ff3300; font-size:80px; opacity:0.9 " > 0</div><br>San Francisco families forced out of their homes, <br>
+         <h3 id="runningTotal">  <div id="counter" style="color: #ff3300; font-size:80px; opacity:0.9 " > 0</div><br>Boston families forced out of their homes, <br>
         <span id="date"> </span> </h3>
          <div id = "timeline">
       <div id="play" class="timeline-element"></div>
        <div id="slider" class="timeline-element"></div>
 
      </div>
-        <p><span style="font-weight: bold; font-size:15px">The Ellis Act</span> is a key mechanism for undermining San Francisco’s rent control laws. The state law gives landlords the right to evict all tenants, even if they have always been good tenants and paid their rent on time. The use of the Ellis act is a legal deception where owners pretend to go out of business. In actuality they aim to create new expensive housing options in the form of group-owned tenancy-in-common flats or condos. Condos are forever exempted from rent protections even if subsequently rented out.</p>
+        <p><span style="font-weight: bold; font-size:15px">The Ellis Act</span> is a key mechanism for undermining Bostons’s rent control laws. The state law gives landlords the right to evict all tenants, even if they have always been good tenants and paid their rent on time. The use of the Ellis act is a legal deception where owners pretend to go out of business. In actuality they aim to create new expensive housing options in the form of group-owned tenancy-in-common flats or condos. Condos are forever exempted from rent protections even if subsequently rented out.</p>
 
         <p><span class="bold" style="font-weight: bold; font-size:15px">There is no limit to the number of times a building owner can “go out of business”. </span>The data shows some owners buying and Ellising multiple buildings over time. If these new owners do not want to be landlords, why are they buying buildings full of rental units?</p>
 
