--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
         <p>The security of rent increase protection applies to only 46% of total housing stock in the city. It is a precious resource that is shrinking everyday.</p>
 
-        <p>This map reveals the accumulation of Ellis Act evictions since they were first utilized by landlords in San Francisco. The size of the explosion corresponds with the number of units displaced by each eviction. A <a href="http://antievictionmappingproject.wordpress.com/timeline-of-displacement/">timeline of Ellis Act evictions can be found here.</a></p>
+        <p>This map reveals the accumulation of Ellis Act evictions since they were first utilized by landlords in Boston. The size of the explosion corresponds with the number of units displaced by each eviction. A <a href="http://antievictionmappingproject.wordpress.com/timeline-of-displacement/">timeline of Ellis Act evictions can be found here.</a></p>
 
         <p>If you have been evicted by the Ellis Act or other means of displacement, please fill out our <a href="http://antievictionmappingproject.wordpress.com/survey/">survey here to put your story on a comprehensive map in the making.</a></p>
 
